--- a/templates/default/users.xml.erb
+++ b/templates/default/users.xml.erb
@@ -27,7 +27,7 @@
     </profiles>
 
     <!-- Users and ACL. -->
-    <users>
+    <users incl="<%= @users['users']['incl'] %>" optional="<%= @users['users']['optional'] %>">
         <!-- If user name was not specified, 'default' user is used. -->
         <default>
             <!-- Password could be specified in plaintext or in SHA256 (in hex format).
@@ -64,7 +64,7 @@
                      Strongly recommended that regexp is ends with $
                  All results of DNS requests are cached till server restart.
             -->
-            <networks>
+            <networks incl="<% @users['users']['default']['networks']['incl'] %>" replace="<% @users['users']['default']['networks']['replace'] %>">
               <% @users['users']['default']['networks']['ip'].each do |ip| %>
                 <ip><%= ip %></ip>
               <% end %>
